src/include/lem/solarix/faind.h


 typedef void* HFAIND;

 typedef void* HREGEXEX;


 typedef void* HGREN_STR;


// Поиск и анализ результатов
FAIND_API(int) sol_SearchRx( HREGEXEX hRegex, const wchar_t *Begin, const wchar_t *End );

FAIND_API(int) sol_CountMatchesRx( HREGEXEX hRegex );

FAIND_API(int) sol_GetMatchTextLenRx( HREGEXEX hRegex, int Index );

FAIND_API(void) sol_GetMatchTextRx( HREGEXEX hRegex, int Index, wchar_t *Buffer, int BufferSize );

FAIND_API(double) sol_GetMatchRankRx( HREGEXEX hRegex, int Index );


FAIND_API(int) sol_FindTaggedDocument( HFAIND hEngine, const wchar_t *Filename, const wchar_t *Location );

FAIND_API(int) sol_GetDocumentTag( HFAIND hEngine, int Id_doc, const wchar_t *Tag, wchar_t **Value );

FAIND_API(int) sol_AddTaggedDocument( HFAIND hEngine, const wchar_t *Filename, const wchar_t *Location );

FAIND_API(int) sol_SetDocumentTag( HFAIND hEngine, int Id_doc, const wchar_t *Tag, const wchar_t *Value );


FAIND_API(int) sol_CountStrings( HGREN_STR h );

FAIND_API(int) sol_GetStrings( HGREN_STR h, wchar_t **Res );

FAIND_API(int) sol_GetString( HGREN_STR h, int i, wchar_t *Res );

FAIND_API(int) sol_DeleteStrings( HGREN_STR h );


FAIND_API(int) sol_Free( HFAIND hEngine, void *Ptr );