src/include/lem/solarix/solarix_grammar_engine.h




// Return the Solarix project version info.
// Если указатели Major, Minor, Build не равны NULL, то через них
// возвращаются соответствующие части номера версии компонента.
//
// Возвращает 0 для DEMO, 1 для PRO, 2 для PREMIUM
FAIND_API(int) sol_GetVersion( HGREN hEngine, int *Major, int *Minor, int *Build );


// Возвращает номер версии загруженного словаря.
// http://www.solarix.ru/api/en/sol_DictionaryVersion.shtml
FAIND_API(int) sol_DictionaryVersion( HGREN hEngine );


// Probe the lexicon for language entries.
// Returns 1 if language is present in lexicon, 0 if not,
FAIND_API(int) sol_HasLanguage( HGREN hEngine, int LanguageID );