src/include/lem/solarix/SearchEngineApi.pas


// Поиск и анализ результатов
function sol_SearchRx( {HREGEXEX} hRegexex: PInteger; BeginStr: PWideChar; EndStr: PWideChar ): integer; stdcall; external 'faind.win32.dll' name 'sol_SearchRx';
function sol_CountMatchesRx( {HREGEXEX} hRegex: PInteger ): integer; stdcall; external 'faind.win32.dll' name 'sol_CountMatchesRx';
function sol_GetMatchTextLenRx( {HREGEXEX} hRegexex: PInteger; Index: Integer ): integer; stdcall; external 'faind.win32.dll' name 'sol_GetMatchTextLenRx';
procedure sol_GetMatchTextRx( {HREGEXEX} hRegexex: PInteger; Index: Integer; Buffer: PWideChar; BufferSize: Integer ); stdcall; external 'faind.win32.dll' name 'sol_GetMatchTextRx';
function sol_GetMatchRankRx( {HREGEXEX} hRegexex: PInteger; Index: Integer ): Double; stdcall; external 'faind.win32.dll' name 'sol_GetMatchRankRx';

function sol_FindTaggedDocument( hEngine: PInteger; Filename: PWideChar; Location: PWideChar ): integer; stdcall; external 'faind.win32.dll' name 'sol_FindTaggedDocument';
//function sol_GetDocumentTag( hEngine: PInteger, int Id_doc, Tag: PWideChar; wchar_t **Value );
function sol_AddTaggedDocument( hEngine: PInteger; Filename: PWideChar; Location: PWideChar ): integer; stdcall; external 'faind.win32.dll' name 'sol_AddTaggedDocument';
function sol_SetDocumentTag( hEngine: PInteger; Id_doc: Integer; Tag: PWideChar; Value: PWideChar ): integer; stdcall; external 'faind.win32.dll' name 'sol_SetDocumentTag';


// Return the Solarix project version info.
// Если указатели Major, Minor, Build не равны NULL, то через них
// возвращаются соответствующие части номера версии компонента.
//
// Возвращает 0 для LITE, 1 для PRO, 2 для PREMIUM
function sol_GetVersion( hEngine: PInteger; Major: PInteger; Minor: PInteger; Build: PInteger ): integer; stdcall; external 'faind.win32.dll' name 'sol_GetVersion';

// Возвращает номер версии загруженного словаря.
function sol_DictionaryVersion( hEngine: PInteger ): integer; stdcall; external 'faind.win32.dll' name 'sol_DictionaryVersion';

function sol_CountStrings( {HGREN_STR} hStr: PInteger ): integer; stdcall; external 'faind.win32.dll' name 'sol_CountStrings';
//function sol_GetStrings( {HGREN_STR} hStr: PInteger;, wchar_t **Res );
function sol_GetString( {HGREN_STR} hStr: PInteger; i: Integer; Res: PWideChar ): integer; stdcall; external 'faind.win32.dll' name 'sol_GetString';
function sol_DeleteStrings( {HGREN_STR} hStr: PInteger ): integer; stdcall; external 'faind.win32.dll' name 'sol_DeleteStrings';

function sol_Free( hEngine: PInteger; Ptr: PInteger ): integer; stdcall; external 'faind.win32.dll' name 'sol_Free';

// Probe the lexicon for language entries.
// Returns 1 if language is present in lexicon, 0 if not,
function sol_HasLanguage( hEngine: PInteger; ilanguage: Integer ): integer; stdcall; external 'faind.win32.dll' name 'sol_HasLanguage';


implementation

end.
